# canopen-device-simulator

./: .gitignore  CMakeLists.txt  README.md
device/: device.eds  device.lua  device.xdd  objects.lua
device_library/: device_helper.lua
include/: canopen_id.hpp  simulated_slave.hpp
scripts/: test.py
src/: main.cpp  simulated_slave.cpp
